--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql:cached
     environment:
-      MYSQL_DATABASE: spa_app
-      MYSQL_USER: spa_app
+      MYSQL_DATABASE: portfolio-laravel-react
+      MYSQL_USER: portfolio-laravel-react
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: password
       TZ: "Asia/Tokyo"
